Fixed jumping on pagination hover
Also set post per page up to 10.

--- a/_sass/atoms/_pagination.sass
+++ b/_sass/atoms/_pagination.sass
@@ -2,6 +2,7 @@
   .a-pagination-link
     text-decoration: none
     color: $accent
+    border-bottom: 2px dotted transparent
     &:hover
       border-bottom: 2px dotted $accent
 
